Updated leader traits, civics and more

--- a/localisation/english/replace/zz_evolved_civics_l_english.yml
+++ b/localisation/english/replace/zz_evolved_civics_l_english.yml
@@ -1589,11 +1589,11 @@
  # ------------------------------------------------------------
 	civic_tec_hive_cerebrates:0 "Designated Cerebrates"
 	civic_tec_hive_cerebrates_desc:0 "To maintain the stability and coherence of the Hive Mind, and promote a more critic and diverse thought, it splits some of its neural capacity between its most capable autonomous drones, specially engineered and breed to be efficient, ruthless and cunning."
-	civic_tec_hive_cerebrates_tooltip:0 "New Hive Mind created leaders have a chance to receive §YUnique traits§! after being created, boosting some of the aspects of this gestalt consciousness.\n\n"
+	civic_tec_hive_cerebrates_tooltip:0 "New Hive Mind created leaders have a §Y33§! chance to receive the §YCerebrate§! trait after being created, boosting some of the aspects of this gestalt consciousness, but increasing its recruitment cost by §R50%§!.\nThe §YCerebrate§! trait will scale with the leader level.\n\n§HInitial pick bonus:§! Starting leaders will always start with the §YCerebrate§! trait.\n"
 
 	civic_tec_hive_cerebrates_cyborg:0 "Organization Matrices"
 	civic_tec_hive_cerebrates_cyborg_desc:0 "To maintain the stability and coherence of the cybernetic link, and promote a more critic and diverse thought, this collective benefits some independend and capable drones with enhanced neural capacity, greatly boosting their efficiency, also making them ruthless and cunning."
-	civic_tec_hive_cerebrates_cyborg_tooltip:0 "New Hive Mind created leaders have a chance to receive §YUnique traits§! after being created, boosting some of the aspects of this cybernetic collective.\n\n"
+	civic_tec_hive_cerebrates_cyborg_tooltip:0 "New Hive Mind created leaders have a §Y33§! chance to receive the §YOrganization Matrix§! trait after being created, boosting some of the aspects of this gestalt consciousness, but increasing its recruitment cost by §R50%§.\nThe §YOrganization Matrix§! trait will scale with the leader level.\n\n§HInitial pick bonus:§! Starting leaders will always start with the §YOrganization Matrix§! trait.\n"
 
 	civic_hive_divided_attention_tooltip:0 "Active employed §YGovernors§! have no £unity£ §YUnity§! Upkeep and produce §G+4§! unity per level.\n\n"
 
@@ -1926,7 +1926,8 @@
 
 # Machine Ruler Civics
 # ------------------------------------------------------------
-	civic_tec_machine_delegated_functions_tooltip:0 "New synthetic leaders have a chance to receive §YUnique traits§! after being created, boosting their functionality.\n\n"
+	civic_tec_machine_delegated_functions_tooltip:0 "New synthetic leaders have a §Y33§! chance to receive the §YDelegated Protocol§! trait after being created, boosting some of the aspects of this gestalt consciousness, but increasing its recruitment cost by §R50%§.\nThe §YDelegated Protocol§! trait will scale with the leader level.\n\n§HInitial pick bonus:§! Starting leaders will always start with the §YDelegated Protocol§! trait.\n"
+	#"New synthetic leaders have a chance to receive §YUnique traits§! after being created, boosting their functionality.\n\n"
 
 # /
 
