--- a/localisation/english/replace/zz_evolved_traits_l_english.yml
+++ b/localisation/english/replace/zz_evolved_traits_l_english.yml
@@ -1071,7 +1071,7 @@
 	leader_trait_tec_prodigy_emulators_desc:0 "§LThis Leader has developed special skills from a young age, playing grand strategy 8k holo-games, applying unusual tactics and real-time-strategy knowledge to its tasks.§!"
 
 	leader_trait_tec_prodigy_tactical:0 "Prodigy: Tactical Brotherhood"
-	leader_trait_tec_prodigy_tactical_desc:0 "This Admiral has developed special skills from a young age, growing and training with his brethren as equals, achieving a greater degree of coordination and sympathy.§!"
+	leader_trait_tec_prodigy_tactical_desc:0 "This Leader has developed special skills from a young age, growing and training with his brethren as equals, achieving a greater degree of coordination and sympathy.§!"
 
 	leader_trait_tec_prodigy_arts:0 "Prodigy: Artistic sensitivity"
 	leader_trait_tec_prodigy_arts_desc:0 "§LThis Leader has developed special skills from a young age, creating a deep bond with arts and culture, greatly valuing and improving social development.§!"
@@ -1080,10 +1080,10 @@
 	leader_trait_tec_prodigy_research_desc:0 "§LThis Leader has developed special skills from a young age, greatly boosting the focus towards research and development of new technologies applied to its tasks.§!"
 
 	leader_trait_tec_prodigy_materials:0 "Prodigy: Materials Engineer"
-	leader_trait_tec_prodigy_materials_desc:0 "§LThis Governor has developed special skills from a young age, knowing the whereabouts of alloy industry and improving itself the production, at a great scale.§!"
+	leader_trait_tec_prodigy_materials_desc:0 "§LThis Leader has developed special skills from a young age, knowing the whereabouts of alloy industry and improving itself the production, at a great scale.§!"
 
 	leader_trait_tec_prodigy_industry:0 "Prodigy: Industrial Engineer"
-	leader_trait_tec_prodigy_industry_desc:0 "§LThis Governor has developed special skills from a young age, being a eminence in the matter of production and design of any good.§!"
+	leader_trait_tec_prodigy_industry_desc:0 "§LThis Leader has developed special skills from a young age, being a eminence in the matter of production and design of any good.§!"
 
 	leader_trait_tec_prodigy_unity:0 "Prodigy: Sense of unity"
 	leader_trait_tec_prodigy_unity_desc:0 "§LThis Ruler has developed special skills from a young age, taking in mind his example as a way to ensure others will be able to follow.§!"
@@ -1095,7 +1095,7 @@
 	leader_trait_tec_prodigy_political_desc:0 "§LThis Ruler has developed special skills from a young age, being a cunning individual able to convince near anyone with a extreme versatile and rich discourse.§!"
 
 	leader_trait_tec_prodigy_detail:0 "Prodigy: Attention to detail"
-	leader_trait_tec_prodigy_detail_desc:0 "§LThis Scientist has developed special skills from a young age, being meticulous and giving extreme attention to details.§!"
+	leader_trait_tec_prodigy_detail_desc:0 "§LThis Leader has developed special skills from a young age, being meticulous and giving extreme attention to details.§!"
 
 	leader_trait_tec_prodigy_genius:0 "Prodigy: Unleashed geniality"
 	leader_trait_tec_prodigy_genius_desc:0 "§LThis Scientist has developed special skills from a young age, having a very distinctive way of operating, both in genius and maniacal ways.§!"
