--- a/localisation/english/zz_evolved_cui_l_english.yml
+++ b/localisation/english/zz_evolved_cui_l_english.yml
@@ -281,3 +281,13 @@ tec_ai_power_balance_positive: "§G+[tec_ai_power_balance_value]§!"
 
 tec_cui_ai_power: "$tec_loc_sr_tec_ai_power$: [FROM.tec_ai_power_balance]"
 tec_cui_ai_power_effect: ""
+
+
+# Annotations
+
+#Leader levels
+
+#Level		II	III		IV		V			VI		VII		VIII	IX		X
+#XP				400	1100	2100	3400	5000	6900	8100	10600	13400
+#Total XP	400	1500	3600	7000	12000	18900	27000	37600	51000
+
