Adjusted leader start effects, added fragmenting CUI and logic, and some more sanity checks for ai nodes species, added a bunch of locs

--- a/localisation/english/replace/zz_evolved_traits_l_english.yml
+++ b/localisation/english/replace/zz_evolved_traits_l_english.yml
@@ -1563,3 +1563,15 @@
 	leader_trait_scientist_tec_elitist_desc:0 "§LThis Scientist is part of a small elite of gifted leaders specially trained with years of investment and effort to serve the empire over less effective ones.§!"
 
 # /
+
+# Ai auth
+trait_tec_aiauth_ruler: "Main AI Node"
+trait_tec_aiauth_ruler_desc: "TODO"
+
+trait_tec_aiauth_node: "Councilor AI Node"
+trait_tec_aiauth_node_desc: "TODO"
+
+trait_tec_aiauth_planetary_node: "Planetary AI Node"
+trait_tec_aiauth_planetary_node_desc: "TODO"
+
+# /
