--- a/localisation/english/zz_evolved_cui_l_english.yml
+++ b/localisation/english/zz_evolved_cui_l_english.yml
@@ -282,4 +282,14 @@ tec_ai_power_balance_positive: "§G+[tec_ai_power_balance_value]§!"
 tec_cui_ai_power: "$tec_loc_sr_tec_ai_power$: [FROM.tec_ai_power_balance]"
 tec_cui_ai_power_effect: ""
 
+tec_cui_aiuth_fragment_admiral: "£admiral£"
+tec_cui_aiuth_fragment_general: "£general£"
+tec_cui_aiuth_fragment_governor: "£governor£"
+tec_cui_aiuth_fragment_scientist: "£scientist£"
+
+tec_cui_aiuth_fragment_admiral_effect: "Fragments the main AI Node into a new $admiral_with_icon$ AI Node, which can only be used to fill councilor positions.\n\nThe fragmented node will take monthly §Y$tec_loc_sr_tec_ai_power$§! Upkeep, but will not take §YLeader Capacity§! and can only get §YCouncilor Traits§!"
+tec_cui_aiuth_fragment_general_effect: "Fragments the main AI Node into a new $general_with_icon$ AI Node, which can only be used to fill councilor positions.\n\nThe fragmented node will take monthly §Y$tec_loc_sr_tec_ai_power$§! Upkeep, but will not take §YLeader Capacity§! and can only get §YCouncilor Traits§!"
+tec_cui_aiuth_fragment_governor_effect: "Fragments the main AI Node into a new $governor_with_icon$ AI Node, which can only be used to fill councilor positions.\n\nThe fragmented node will take monthly §Y$tec_loc_sr_tec_ai_power$§! Upkeep, but will not take §YLeader Capacity§! and can only get §YCouncilor Traits§!"
+tec_cui_aiuth_fragment_scientist_effect: "Fragments the main AI Node into a new $scientist_with_icon$ AI Node, which can only be used to fill councilor positions.\n\nThe fragmented node will take monthly §Y$tec_loc_sr_tec_ai_power$§! Upkeep, but will not take §YLeader Capacity§! and can only get §YCouncilor Traits§!"
+
 tec_aiauth_experience_tooltip: "\nAI Node Leaders do not gain experience normally. Spare §Y$tec_loc_sr_tec_ai_power$§! gets converted into experience, distributed in a weighted manner between AI nodes.\n\nExperience Weight Share/Total: §Y[tec_aiauth_node_weight_tooltip]/[owner.tec_aiauth_total_weight]§!"
