--- a/localisation/english/zz_evolved_edict_policies_l_english.yml
+++ b/localisation/english/zz_evolved_edict_policies_l_english.yml
@@ -1360,3 +1360,39 @@ enslavement_00_name:0 "Not specified"
 enslavement_00_desc:0 " "
 
 
+# Ai auths
+
+  policy_tec_aiauth_policy_slider:0 "---- §E$tec_loc_sr_tec_ai_power Policies$§! ----"
+  policy_tec_aiauth_policy_slider_desc:0 "Policies relevant to AI Capacity and AI Nodes."
+
+ policy_tec_aiauth_share_policy: "Experience Weight"
+ policy_tec_aiauth_share_policy_desc: "TODO"
+
+policy_tec_aiauth_share_policy_no_focus: "No AI Node Focus"
+policy_tec_aiauth_share_policy_no_focus_name: "No AI Node Focus"
+policy_tec_aiauth_share_policy_no_focus_desc: "TODO"
+
+policy_tec_aiauth_share_policy_ruler_focus: "Ruler AI Node Focus"
+policy_tec_aiauth_share_policy_ruler_focus_name: "Ruler AI Node Focus"
+policy_tec_aiauth_share_policy_ruler_focus_desc: "TODO"
+
+policy_tec_aiauth_share_policy_councilor_focus: "Councilor AI Node Focus"
+policy_tec_aiauth_share_policy_councilor_focus_name: "Councilor AI Node Focus"
+policy_tec_aiauth_share_policy_councilor_focus_desc: "TODO"
+
+policy_tec_aiauth_share_policy_planetary_node_focus: "Planetary AI Node Focus"
+policy_tec_aiauth_share_policy_planetary_node_focus_name: "Planetary AI Node Focus"
+policy_tec_aiauth_share_policy_planetary_node_focus_desc: "TODO"
+
+
+
+ policy_tec_aiauth_idle_share_policy: "Idle AI Nodes"
+ policy_tec_aiauth_idle_share_policy_desc: "TODO"
+
+policy_tec_aiauth_idle_share_policy_no_idle: "No Idle AI Node Growth"
+policy_tec_aiauth_idle_share_policy_no_idle_name: "No Idle AI Node Growth"
+policy_tec_aiauth_idle_share_policy_no_idle_desc: "TODO"
+
+policy_tec_aiauth_idle_share_policy_grow_idle: "Idle AI Node Growth"
+policy_tec_aiauth_idle_share_policy_grow_idle_name: "Idle AI Node Growth"
+policy_tec_aiauth_idle_share_policy_grow_idle_desc: "TODO"
