another batch of changes

--- a/localisation/english/replace/zz_evolved_ethics_authorities_l_english.yml
+++ b/localisation/english/replace/zz_evolved_ethics_authorities_l_english.yml
@@ -327,7 +327,7 @@
 	ethic_elitist_desc:0 "§LIn the great dance of civilizations, we must accept that we each have different parts to play. For many, that place is at the base foundation of our society, toiling in drudgery so that others have the opportunity to bring their talents to bear on the social good. Let no one mistake our privilege for leisure; we are no less custodians than our servants, our tasks no less menial or vital.§!\n" 
  
 	ethic_fanatic_elitist:0 "Fanatic Elitist"
-	ethic_fanatic_elitist_desc:0 "§LSociety is a herd, with shepherds and watchdogs; society is a struggle, with winners and losers. The unwashed masses, little better than animals, need the leadership of those destined few with the necessary acumen, vision, and strength to guide them towards a greater purpose. Who better than us?§!\n" 
+	ethic_fanatic_elitist_desc:0 "§LSociety is a herd, with shepherds and watchdogs; society is a struggle, with winners and losers. The unwashed masses, little better than animals, need the leadership of those destined few with the necessary acumen, vision, and strength to guide them towards a greater purpose. Who better than us?§!\n"
 
 	TEC_ETHIC_FAN_ELITIST_LEADER_BONUS:0 "§EAll recruited leaders will gain §H2§! additional levels. Capped at §H+3§! initial levels.§!"
 	TEC_ETHIC_ELITIST_LEADER_BONUS:0 "§EAll recruited leaders will gain §H1§! additional level. Capped at §H+3§! initial levels.§!"
@@ -368,6 +368,25 @@
 # /
 
 # ------------------------------------------------- GESTALTS
+	# Main
+	ethic_gestalt_consciousness:0 "Gestalt Consciousness"
+	ethic_gestalt_consciousness_plural:0 "Gestalts"
+	ethic_gestalt_consciousness_minor:0 "gestalt"
+	ethic_gestalt_consciousness_minor_plural:0 "gestalts"
+	ethic_gestalt_consciousness_adj:0 "Collective"
+	ethic_gestalt_consciousness_adj_minor:0 "collective"
+	ethic_gestalt_consciousness_desc:0 "§LWe reach into the void.\nThe vast expanse becomes us.§!"
+
+	TEC_ETHIC_GESTALT_CONSCIOUSNESS_AUTHORITY:0 "§ECannot use §HDemocratic§!, §HOligarchic§!, §HDictatorial§!, §HImperial§! or §HAI§! authorities§!"
+	TEC_ETHIC_GESTALT_CONSCIOUSNESS_NO_FACTIONS:0 "§ENative Pops are generally not affected by §HHappiness§! and will not join standard §HFactions§!§!"
+	TEC_ETHIC_GESTALT_CONSCIOUSNESS_DOMESTIC_POP_SURVIVAL:0 "§ENative Pops can not survive in non-§HGestalt§! or §HXenophile§! empires§!"
+
+	TEC_ETHIC_GESTALT_LIVING_STANDARD:0 "§HLiving Standard:§! Native pops  belong to the §Y['concept_tec_living_standard_drone']§! Living Standards and do not require £consumer_goods£ §YConsumer Goods§!"
+	#TEC_ETHIC_GESTALT_EDICT:0 "§HEdict Bonus:§! Allows the use of the £mod_country_edict_fund_add£ §Y['concept_tec_edict_equal_opportunities']§! edict"
+	#TEC_ETHIC_GESTALT_POLICY:0 "§HPolicy Bonus:§! Has access to the £political_power£ §Y['concept_tec_ethic_policy_gestalt']§!"
+	TEC_ETHIC_GESTALT_MECHANIC:0 "§HMechanic Bonus:§! Rulers are §YImmortal§!, and provide gestalt leaders with §YMonthly Experience§! based on its §YLevel§!"
+
+
 #phile
 	ethic_gestalt_empathy:0 "Empathy"
 	ethic_gestalt_empathy_desc:0 "§BGestalt Xenophile Motivation§!\n\n§HIf the collective has the adequate technology researched, and the £consumer_goods£ necessary resources, it can host non-gestalt £pops£ pops, which would increase the planet £unity£ §EUnity§! and £pops£ §EDrone Output§!, or serve as §EMenial Workers§!.§!\n\n§LThis gestalt consciousness cares about other space-faring beings in the universe, being curious and driven to share with other sentient beings, no matter how they live or though, to understand how other minds work.§!" 
