--- a/localisation/english/replace/zz_evolved_traits_l_english.yml
+++ b/localisation/english/replace/zz_evolved_traits_l_english.yml
@@ -1076,7 +1076,7 @@
 	leader_trait_tec_prodigy_arts:0 "Prodigy: Artistic sensitivity"
 	leader_trait_tec_prodigy_arts_desc:0 "§LThis Leader has developed special skills from a young age, creating a deep bond with arts and culture, greatly valuing and improving social development.§!"
 
-	leader_trait_tec_prodigy_research:0 "Prodigy: Scientific rusher"
+	leader_trait_tec_prodigy_research:0 "Prodigy: Academic Genius"
 	leader_trait_tec_prodigy_research_desc:0 "§LThis Leader has developed special skills from a young age, greatly boosting the focus towards research and development of new technologies applied to its tasks.§!"
 
 	leader_trait_tec_prodigy_materials:0 "Prodigy: Materials Engineer"
