--- a/localisation/english/zz_evolved_concepts_l_english.yml
+++ b/localisation/english/zz_evolved_concepts_l_english.yml
@@ -81,9 +81,9 @@
 	concept_tec_climate_civics: "Climate Specific Civics"
 	concept_tec_climate_civic_desc: "Climate civics are mutually exclusive, usually offering bonuses to a specific planetary climate, such as giving districts swaps."
 
-	concept_tec_leader_civic: "Leader Civic"
-	concept_tec_leader_civics: "Leader Civics"
-	concept_tec_leader_civic_desc: "Leader civics are mutually exclusive, usually making §YLeaders§! of a specific type produce resources depending on their leader level and some other factors, while also removing the upkeep."
+	#concept_tec_leader_civic: "Leader Civic"
+	#concept_tec_leader_civics: "Leader Civics"
+	#concept_tec_leader_civic_desc: "Leader civics are mutually exclusive, usually making §YLeaders§! of a specific type produce resources depending on their leader level and some other factors, while also removing the upkeep."
 # /
 
 # General
@@ -493,15 +493,19 @@
  # Living Standards
 	concept_tec_living_standard_utopian: "Utopian"
 	concept_tec_living_standard_utopian_alias: "Utopian Living Standard"
-	concept_tec_living_standard_utopian_desc: "TO DO"
+	concept_tec_living_standard_utopian_desc: "$living_standard_utopian_tooltip_delayed$\n\n$living_standard_utopian_tooltip$"
 
 	concept_tec_living_standard_stratified: "Stratified"
 	concept_tec_living_standard_stratified_alias: "Stratified Living Standard"
-	concept_tec_living_standard_stratified_desc: "TO DO"
+	concept_tec_living_standard_stratified_desc: "$living_standard_stratified_tooltip_delayed$\n\n$living_standard_stratified_tooltip$"
 
 	concept_tec_living_standard_academic: "Academic Privilege"
 	concept_tec_living_standard_academic_alias: "Academic Privilege Living Standard"
-	concept_tec_living_standard_academic_desc: "TO DO"
+	concept_tec_living_standard_academic_desc: "$living_standard_academic_privilege_tooltip_delayed$\n\n$living_standard_academic_privilege_tooltip$"
+
+	concept_tec_living_standard_drone: "Drone"
+	concept_tec_living_standard_drone_alias: "Drone Living Standard"
+	concept_tec_living_standard_drone_desc: "$living_standard_hive_mind_tooltip_delayed$\n\n$living_standard_hive_mind_tooltip$"
  # /
  # Edict
 	concept_tec_edict_encourage_thought: "Encourage Thought"
