--- a/localisation/english/zz_evolved_edict_policies_l_english.yml
+++ b/localisation/english/zz_evolved_edict_policies_l_english.yml
@@ -1289,6 +1289,9 @@ policy_goods_policy:0 "Consumer Goods Production"
  policy_slave_policy_slider:0 "---- £job_servant£ §EEnslavement Policies§! ----"
  policy_slave_policy_slider_desc:0 "Policies relevant to enslavement control."
 
+ policy_tec_ethic_policicies_slider:0 "---- £system£ §EEthic Policies§! ----"
+ policy_tec_ethic_policicies_slider_desc:0 "Policies relevant to the empire ideologies and ethics.\n\n§YThese policies depend on the empire ethics§!"
+
  policy_state_policy_slider:0 "---- £job_clerk£ §EState Policies§! ----"
  policy_state_policy_slider_desc:0 "Policies relevant to localized empire administration.\n\n§YMost of these policies will be unlocked with normal administration techs.§!"
 
