--- a/localisation/english/replace/!_evolved_to_do_R6_l_english.yml
+++ b/localisation/english/replace/!_evolved_to_do_R6_l_english.yml
@@ -84,7 +84,7 @@
 		# Policy:
 			#> Democratization:	Administrators produce +1 unity and amenities
 			#> Impartiality: 		Rulers increase specialist output by 1% and reduce ethic attraction by 1%
-			#> Hierarchization:	Agenda speed +10, edict upkeep -5-10%
+			#> Hierarchization:	Agenda speed +10/20%, edict upkeep -5-10%
 
 		policy_tec_egalitarian_ethic_policy:0 "$ethic_egalitarian$ Ethic Policy"
 		policy_tec_egalitarian_ethic_policy_desc:0 "Everyone deserves dignity and a correct treatment; is in our hands to provide ways to ensure democracy and equality."
@@ -298,10 +298,72 @@
 		# +10-20% unity
 		#TEC_ETHIC_SPIRITUALIST_POLICY:0 "§EPolicy Bonus:§! Has access to the £political_power£ §HEmpire Cult§! Policy, allowing certain bonuses based on the chosen faith\n\n"
 
-		policy_tec_spiritualist_ethic_policy:0 "$ethic_pacifist$ Ethic Policy"
-		policy_tec_spiritualist_ethic_policy_desc:0 "TO DO DESC"
+		policy_tec_spiritualist_ethic_policy:0 "$ethic_spiritualist$ Cult Policy"
+		policy_tec_spiritualist_ethic_policy_desc:0 "Our faith is strong, diverse and divine; its manifestation elevate and guide our kind"
 
-		Cults q_q
+		policy_option_tec_spiritualist_cult_fertility:0 "Cult of Fertility"
+		policy_option_tec_spiritualist_cult_fertility_name:0 "$policy_option_tec_spiritualist_cult_fertility$"
+		policy_option_tec_spiritualist_cult_fertility_desc:0 "We must extend our reach, be more, grow more, to propagate our creed.\n\n§EThis option has its focus on Pop Growth§!\n\n£job_priest£ §YPriests§! increase the planet £mod_pop_growth_speed£ §YOrganic Pop Growth§! by §G0.15%§!"
+
+		policy_option_tec_fanatic_spiritualist_cult_fertility:0 "$policy_option_tec_spiritualist_cult_fertility$"
+		policy_option_tec_fanatic_spiritualist_cult_fertility_name:0 "$policy_option_tec_spiritualist_cult_fertility$"
+		policy_option_tec_fanatic_spiritualist_cult_fertility_desc:0 "We must extend our reach, be more, grow more, to propagate our creed.\n\n§EThis option has its focus on Pop Growth§!\n\n£job_priest£ §YPriests§! increase the planet £mod_pop_growth_speed£ §YOrganic Pop Growth§! by §G0.3%§!"
+
+		policy_option_tec_spiritualist_cult_multiplicity:0 "Cult of Multiplicity"
+		policy_option_tec_spiritualist_cult_multiplicity_name:0 "$policy_option_tec_spiritualist_cult_multiplicity$"
+		policy_option_tec_spiritualist_cult_multiplicity_desc:0 "Even crafted bodies are sacred and must be respected; the psalms and caring during the process of allowing a new life must be in harmony.\n\n§EThis option has its focus on Pop Assembly§!\n\n£job_priest£ §YPriests§! increase the planet £mod_pop_growth_speed£ §YOrganic Pop Assembly§! by §G0.15%§!"
+
+		policy_option_tec_fanatic_spiritualist_cult_multiplicity:0 "$policy_option_tec_spiritualist_cult_multiplicity$"
+		policy_option_tec_fanatic_spiritualist_cult_multiplicity_name:0 "$policy_option_tec_spiritualist_cult_multiplicity$"
+		policy_option_tec_fanatic_spiritualist_cult_multiplicity_desc:0 "Even crafted bodies are sacred and must be respected; the psalms and caring during the process of allowing a new life must be in harmony.\n\n§EThis option has its focus on Pop Assembly§!\n\n£job_priest£ §YPriests§! increase the planet £mod_pop_growth_speed£ §YOrganic Pop Assembly§! by §G0.3%§!"
+
+		policy_option_tec_spiritualist_cult_metal:0 "Cult of the Metal"
+		policy_option_tec_spiritualist_cult_metal_name:0 "$policy_option_tec_spiritualist_cult_metal$"
+		policy_option_tec_spiritualist_cult_metal_desc:0 "The synthetics golems we create are a gift of the mind, a tool provided by the divine.\n\n§EThis option has its focus on Pop Assembly§!\n\n£job_priest£ §YPriests§! increase the planet £job_roboticist£ §YRobotic Pop Assembly§! by §G0.15%§!"
+
+		policy_option_tec_fanatic_spiritualist_cult_metal:0 "$policy_option_tec_spiritualist_cult_metal$"
+		policy_option_tec_fanatic_spiritualist_cult_metal_name:0 "$policy_option_tec_spiritualist_cult_metal$"
+		policy_option_tec_fanatic_spiritualist_cult_metal_desc:0 "The synthetics golems we create are a gift of the mind, a tool provided by the divine.\n\n§EThis option has its focus on Pop Assembly§!\n\n£job_priest£ §YPriests§! increase the planet £job_roboticist£ §YRobotic Pop Assembly§! by §G0.3%§!"
+
+		policy_option_tec_spiritualist_cult_prosperity:0 "Cult of Prosperity"
+		policy_option_tec_spiritualist_cult_prosperity_name:0 "$policy_option_tec_spiritualist_cult_prosperity$"
+		policy_option_tec_spiritualist_cult_prosperity_desc:0 "Our faith moves us together, our faith moves us closer to happiness and to thriving, no matter the situation.\n\n§EThis option has its focus on Pop Output§!\n\n£job_priest£ §YPriests§! increase the planet £job£ §YJob Output§! by §G0.15%§!"
+
+		policy_option_tec_fanatic_spiritualist_cult_prosperity:0 "$policy_option_tec_spiritualist_cult_prosperity$"
+		policy_option_tec_fanatic_spiritualist_cult_prosperity_name:0 "$policy_option_tec_spiritualist_cult_prosperity$"
+		policy_option_tec_fanatic_spiritualist_cult_prosperity_desc:0 "Our faith moves us together, our faith moves us closer to happiness and to thriving, no matter the situation.\n\n§EThis option has its focus on Pop Output§!\n\n£job_priest£ §YPriests§! increase the planet £job£ §YJob Output§! by §G0.3%§!"
+
+		policy_option_tec_spiritualist_cult_war:0 "Cult of War"
+		policy_option_tec_spiritualist_cult_war_name:0 "$policy_option_tec_spiritualist_cult_war$"
+		policy_option_tec_spiritualist_cult_war_desc:0 "The divine demands us to be prepared; we must be ready to defy the evil intentions of evil entities who try to diminish our creed.\n\n§EThis option has its focus on Naval Performance§!\n\n£job_priest£ §YPriests§! increase £mod_country_naval_cap_add£ §Y$MOD_COUNTRY_NAVAL_CAP_ADD$§! by §G1§!"
+
+		policy_option_tec_fanatic_spiritualist_cult_war:0 "$policy_option_tec_spiritualist_cult_war$"
+		policy_option_tec_fanatic_spiritualist_cult_war_name:0 "$policy_option_tec_spiritualist_cult_war$"
+		policy_option_tec_fanatic_spiritualist_cult_war_desc:0 "The divine demands us to be prepared; we must be ready to defy the evil intentions of evil entities who try to diminish our creed.\n\n§EThis option has its focus on Naval Performance§!\n\n£job_priest£ §YPriests§! increase £mod_country_naval_cap_add£ §Y$MOD_COUNTRY_NAVAL_CAP_ADD$§! by §G2§!"
+
+		policy_option_tec_spiritualist_cult_knowledge:0 "Cult of Knowledge"
+		policy_option_tec_spiritualist_cult_knowledge_name:0 "$policy_option_tec_spiritualist_cult_knowledge$"
+		policy_option_tec_spiritualist_cult_knowledge_desc:0 "The divine drives us to know more, to discover the secrets of this universe.\n\n§EThis option has its focus on Research§!\n\n"
+
+		policy_option_tec_fanatic_spiritualist_cult_knowledge:0 "$policy_option_tec_spiritualist_cult_knowledge$"
+		policy_option_tec_fanatic_spiritualist_cult_knowledge_name:0 "$policy_option_tec_spiritualist_cult_knowledge$"
+		policy_option_tec_fanatic_spiritualist_cult_knowledge_desc:0 "The divine drives us to know more, to discover the secrets of this universe.\n\n§EThis option has its focus on Research§!\n\n"
+
+		policy_option_tec_spiritualist_cult_machine:0 "Cult of the Holy Machine"
+		policy_option_tec_spiritualist_cult_machine_name:0 "$policy_option_tec_spiritualist_cult_machine$"
+		policy_option_tec_spiritualist_cult_machine_desc:0 "The divine resides in our cybernetic brethren, the machine is a holy representation of our faith.\n\n§EThis option has its focus on Robotic Pop Output§!\n\n£job_priest£ §YPriests§! increase the planet £job_roboticist£ §YRobot and Cyborg Output§! by §G0.25%§!"
+
+		policy_option_tec_fanatic_spiritualist_cult_machine:0 "$policy_option_tec_spiritualist_cult_machine$"
+		policy_option_tec_fanatic_spiritualist_cult_machine_name:0 "$policy_option_tec_spiritualist_cult_machine$"
+		policy_option_tec_fanatic_spiritualist_cult_machine_desc:0 "The divine resides in our robotic brethren, direct representation of our faith.\n\n§EThis option has its focus on Robotic Pop Output§!\n\n£job_priest£ §YPriests§! increase the planet £job_roboticist£ §YRobot and Cyborg Output§! by §G0.5%§!"
+
+		policy_option_tec_spiritualist_cult_gaia:0 "Cult of Gaia"
+		policy_option_tec_spiritualist_cult_gaia_name:0 "$policy_option_tec_spiritualist_cult_gaia$"
+		policy_option_tec_spiritualist_cult_gaia_desc:0 "We have been given the paradise and the paradise represents divinity; each step on this sacred land is a step forwards for our kind, and for our faith.\n\n§EThis option has its focus on Gaia Worlds§!\n\n£job_priest£ §YPriests§! increase the planet £job£ §YPop Output on Gaia Worlds§! by §G0.25%§!"
+
+		policy_option_tec_fanatic_spiritualist_cult_gaia:0 "$policy_option_tec_spiritualist_cult_gaia$"
+		policy_option_tec_fanatic_spiritualist_cult_gaia_name:0 "$policy_option_tec_spiritualist_cult_gaia$"
+		policy_option_tec_fanatic_spiritualist_cult_gaia_desc:0 "We have been given the paradise and the paradise represents divinity; each step on this sacred land is a step forwards for our kind, and for our faith.\n\n§EThis option has its focus on Gaia Worlds§!\n\n£job_priest£ §YPriests§! increase the planet £job£ §YPop Output on Gaia Worlds§! by §G0.5%§!"
 
 		#- Materialist
 		#	> Remove upkeep from jobs
@@ -311,7 +373,7 @@
 		#TEC_ETHIC_MATERIALIST_POLICY:0 "§EPolicy Bonus:§! Has access to the £political_power£ §HInnovation focus§! Policy, allowing a specific focus on a research field\n\n"
 
 		policy_tec_materialist_ethic_policy:0 "$ethic_materialist$ Ethic Policy"
-		policy_tec_materialist_ethic_policy_desc:0 "TO DO DESC"
+		policy_tec_materialist_ethic_policy_desc:0 "Discoveries, advancements, progress; we must not fear or stop at any kind of procedure that allows us to gather more information, to research new alternatives and ways to understand the universe."
 		# Physics group
 			policy_option_tec_materialist_phy_particles:0 "£physics£ Particle Science Focus"
 			policy_option_tec_materialist_phy_particles_name:0 "$policy_option_tec_materialist_phy_particles$"
@@ -401,23 +463,6 @@
 			policy_option_tec_fanatic_materialist_eng_voidcraft:0 "$policy_option_tec_materialist_eng_voidcraft$"
 			policy_option_tec_fanatic_materialist_eng_voidcraft_name:0 "$policy_option_tec_materialist_eng_voidcraft$"
 			policy_option_tec_fanatic_materialist_eng_voidcraft_desc:0 "TO DO.\n\n§ETO DO§!"
-
-
-			#	has_trait = leader_trait_expertise_particles
-			#	has_trait = leader_trait_expertise_field_manipulation
-			#	has_trait = leader_trait_expertise_computing
-
-			#	has_trait = leader_trait_expertise_military_theory
-			#	has_trait = leader_trait_expertise_new_worlds
-			#	has_trait = leader_trait_expertise_biology
-			#	has_trait = leader_trait_expertise_statecraft
-			#	has_trait = leader_trait_expertise_archaeostudies
-			#	has_trait = leader_trait_expertise_psionics
-
-			#	has_trait = leader_trait_expertise_industry
-			#	has_trait = leader_trait_expertise_materials
-			#	has_trait = leader_trait_expertise_propulsion
-			#	has_trait = leader_trait_expertise_voidcraft
 
 		#- Cooperative
 		#	> Remove pop housing usage
