pre-final changes

--- a/localisation/english/replace/zz_evolved_ethics_authorities_l_english.yml
+++ b/localisation/english/replace/zz_evolved_ethics_authorities_l_english.yml
@@ -80,6 +80,7 @@
 # ---------------------------------------------------------------
  # Misc
 	TEC_ETHIC_JUMP:0 "\n"
+	TEC_ETHIC_CUSTOMIZABLE:0 "§E£system£ This ethic can be §Hcustomized§! with an ['concept_tec_ethic_policy']\n\n"
  # /
  # Vanilla
 	# Note: Overwrote to adjust some values and small loc things
