pre-final changes

--- a/localisation/english/replace/zz_evolved_civics_l_english.yml
+++ b/localisation/english/replace/zz_evolved_civics_l_english.yml
@@ -510,7 +510,8 @@
 
 	civic_shared_burden:0 "§L§!Shared Burdens"
 	civic_shared_burden_desc:0 "['concept_tec_feature_civic']\n['concept_tec_living_standard_civic']\n\nThis society believes in an equitable distribution of resources, making little to no distinction between the needs of ruler and ruled. All work together for the benefit of the whole."
-	civic_shared_burden_tooltip:3 "Allows §Y$living_standard_shared_burden$§! Living Standard, under which all £pop£ Pops have moderate §Y$tec_loc_consumer_goods$§! Upkeep regardless of §YStrata§!\nDisables the use of most other §YLiving Standards§!\nGrants access to the £building£ §Y$holding_communal_housing_outreach$§! Holding\n$tec_loc_amenities$ from £job_clerk£ $job_clerk_plural$: §G+1§!"
+	civic_shared_burden_tooltip:3 "Allows §Y$living_standard_shared_burden$§! Living Standard, under which all £pop£ Pops have moderate §Y$tec_loc_consumer_goods$§! Upkeep regardless of §YStrata§!\nDisables the use of most other §YLiving Standards§!\nGrants access to the £building£ §Y$holding_communal_housing_outreach$§! Holding"
+	# \n$tec_loc_amenities$ from £job_clerk£ $job_clerk_plural$: §G+1§!
 
 	civic_reanimated_armies:0 "§L§!Dread Armies" 
 	civic_reanimated_armies_desc:0 "['concept_tec_feature_civic']\n\nWithin this society, death is no bar to the call to arms. Masters of the art of necromancy reanimate deceased corpses to raise a dread host that strikes fear into the hearts of lesser mortals."
