--- a/localisation/english/zz_evolved_concepts_l_english.yml
+++ b/localisation/english/zz_evolved_concepts_l_english.yml
@@ -565,6 +565,10 @@
 	concept_tec_edict_equal_opportunities_desc: "TO DO"
  # /
  # Policy
+	concept_tec_ethic_policy: "Ethic Policy"
+	concept_tec_ethic_policy_alias: "£system£ Ethic Policies"
+	concept_tec_ethic_policy_desc: "Ethic policies are specific empire policies that allow the adaptation of an ethic to diverse playstyles, builds and background enrichment.\nGenerally their effects are doubled for fanatic versions of the ethic axis."
+
 	concept_tec_ethic_policy_egalitarian: "$ethic_egalitarian$ Policies"
 	concept_tec_ethic_policy_egalitarian_alias: "$concept_tec_ethic_policy_egalitarian$"
 	concept_tec_ethic_policy_egalitarian_desc: "TO DO"
